# pytest-boardfarm

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  README.rst  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
bf_pytest/: __init__.py  example.py  fixtures.py
boardfarm_pytest/: conftest.py  example.py
integrationtests/pytest_boardfarm/: test_bft_base_test_integration.py  test_logger.py
pytest_boardfarm/: __init__.py  add_pytest_markers.py  boardfarm_fixtures.py  boardfarm_plugin.py  connections.py  example.py  exceptions.py  fixtures.py  hooks.py  merge_junit_results.py  plugin.py  pytest_logging.py  pytest_plugin.py  tst_results.py
pytest_boardfarm/lib/: __init__.py  html_report.py  test_logger.py  utils.py
pytest_boardfarm/tests/: test_interact.py  test_plugin.py
pytest_boardfarm3/: __init__.py  boardfarm_fixtures.py  boardfarm_plugin.py  exceptions.py  pytest_plugin.py
pytest_boardfarm3/configs/: __init__.py  logging.json
pytest_boardfarm3/lib/: __init__.py  argument_parser.py  html_report.py  test_logger.py  utils.py
unittests/: test_utils.py
