[build-system]
    build-backend = "flit_core.buildapi"
    requires      = ["flit_core >=3.2,<4"]

[project]
    authors = [
        { name = "Various", email = "t&iconnectivityboardfarm@libertyglobal.com" },
    ]
    name = "pytest_boardfarm"
    readme = "README.md"

    classifiers = [
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "Intended Audience :: Telecommunications Industry",
        "License :: OSI Approved :: BSD License",
        "Programming Language :: Python :: 3",
        "Topic :: Software Development :: Embedded Systems",
        "Topic :: Software Development :: Quality Assurance",
        "Topic :: Software Development :: Testing",
        "Topic :: Software Development :: Testing :: Acceptance",
    ]
    dynamic = ['version', 'description']
    requires-python = ">=3.6"

    dependencies = [
        "pytest>6",
        "pytest-cov",
        "pytest-elk-reporter",
        "pytest-html",
        "pytest-instafail",
        "pytest-json",
        "pytest-mock",
        "pytest-order",
        "pytest-picked",
        "pytest-randomly",
        "pytest-xdist",
    ]

    [project.optional-dependencies]
        dev = [
            "black",
            "flake8",
            "flake8-bugbear",
            "flake8-docstrings",
            "flake8-rst",
            "flake8-rst-docstrings",
            "mypy",
            "pre-commit",
            "pylint",
        ]
        doc = ["sphinx"]
        test = [
            "pytest",
            "pytest-cov",
            "pytest-html",
            "pytest-mock",
            "pytest-randomly",
            "pytest-xdist",
        ]

    [project.urls]
        Source = "https://github.com/lgirdk/pytest-boardfarm"

    [project.entry-points."pytest11"]
        pytest_boardfarm = "pytest_boardfarm.plugin"

[tool.commitizen]
    name = "cz_conventional_commits"
    style = [
        ["qmark", "fg:#ff9d00 bold"],
        ["question", "bold"],
        ["answer", "fg:#ff9d00 bold"],
        ["pointer", "fg:#ff9d00 bold"],
        ["highlighted", "fg:#ff9d00 bold"],
        ["selected", "fg:#cc5454"],
        ["separator", "fg:#cc5454"],
        ["instruction", ""],
        ["text", ""],
        ["disabled", "fg:#858585 italic"],
    ]
    tag_format = "$version"
    version = "1.1.1"
    version_files = [
        "boardfarm/__init__.py:version",
        "pyproject.toml:version",
    ]
