[build-system]
    build-backend = "flit_core.buildapi"
    requires      = ["flit_core >=3.2,<4"]

[project]
    authors = [
        { name = "Various", email = "t&iconnectivityboardfarm@libertyglobal.com" },
    ]
    name = "pytest_boardfarm"
    readme = "README.md"

    classifiers = [
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "Intended Audience :: Telecommunications Industry",
        "License :: OSI Approved :: BSD License",
        "Programming Language :: Python :: 3",
        "Topic :: Software Development :: Embedded Systems",
        "Topic :: Software Development :: Quality Assurance",
        "Topic :: Software Development :: Testing",
        "Topic :: Software Development :: Testing :: Acceptance",
    ]
    dynamic = ['version', 'description']
    requires-python = ">=3.6"

    dependencies = [

        "boardfarm_docsis",
        "pytest<7,>=6",
        "pytest-cov",          # TODO: am I really needed?
        "pytest-elk-reporter", # TODO: am I really needed?
        "pytest-instafail",    # TODO: am I really needed?
        "pytest-json",         # TODO: am I really needed?
        "pytest-order",        # TODO: am I really needed?
        "pytest-picked",       # TODO: am I not needed by the pipelines?
    ]

    [project.optional-dependencies]
        dev = [
            "boardfarm[dev]",
            "nox",
        ]
        doc = [
            "boardfarm[doc]",
        ]
        test = [
            "boardfarm[test]",
        ]

    [project.urls]
        Source = "https://github.com/lgirdk/pytest-boardfarm"

    [project.entry-points."pytest11"]
        pytest_boardfarm = "pytest_boardfarm.plugin"

[tool.commitizen]
    bump_message = "Bump version to $new_version"
    name = "cz_conventional_commits"
    style = [
        ["qmark", "fg:#ff9d00 bold"],
        ["question", "bold"],
        ["answer", "fg:#ff9d00 bold"],
        ["pointer", "fg:#ff9d00 bold"],
        ["highlighted", "fg:#ff9d00 bold"],
        ["selected", "fg:#cc5454"],
        ["separator", "fg:#cc5454"],
        ["instruction", ""],
        ["text", ""],
        ["disabled", "fg:#858585 italic"],
    ]
    tag_format = "$version"
    version = "2022.35.0"
    version_files = [
        "pytest_boardfarm/__init__.py:version",
        "pyproject.toml:version",
        "pyproject.toml:current",
    ]

[tool.isort]
    profile = "black"

[tool.tbump]
    [tool.tbump.version]
        current = "2022.35.0"

        # Example of a semver regexp.
        # Make sure this matches current_version before
        # using tbump
        regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

    [tool.tbump.git]
        message_template = "Bump to {new_version}"
        tag_template     = "{new_version}"

    # For each file to patch, there is a [[tool.tbump.file]] config
    # section containing the path of the file, relative to the
    # pyproject.toml location.
    [[tool.tbump.file]]
        src = "pytest_boardfarm/__init__.py"

    [[tool.tbump.file]]
        src = "pyproject.toml"
